// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render data with pencil button when onItemEdit callback is passed 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerButtonCell headerCell"
        >
          <span>
            <span
              aria-label="su-pen"
              class="su-pen"
            />
          </span>
        </th>
        <th
          class="headerCell clickable"
        >
          <button>
            Description
          </button>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="buttonCell cell"
        >
          <div
            class="cellContent"
          >
            <button>
              <span
                aria-label="su-pen"
                class="su-pen"
              />
            </button>
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render data with plus button when onItemAdd callback is passed 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell clickable"
        >
          <button>
            Description
          </button>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render data with schema 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell clickable"
        >
          <button>
            Title
          </button>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Test1
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <span
              class="toggleIcon"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
            Test2
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <span
              class="toggleIcon"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
            Test3
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render data with schema and selections 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell clickable"
        >
          <button>
            Title
          </button>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Test1
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <span
              class="toggleIcon"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
            Test2
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <span
              class="toggleIcon"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
            Test3
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Render data with two columns 1`] = `
<div
  class="tableContainer"
>
  <table
    class="table"
  >
    <thead
      class="header"
    >
      <tr>
        <th
          class="headerCell clickable"
        >
          <button>
            Title
          </button>
        </th>
        <th
          class="headerCell clickable"
        >
          <button>
            Title2
          </button>
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Test1
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Title2 - Test1
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <span
              class="toggleIcon"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
            Test2
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Title2 - Test2
          </div>
        </td>
      </tr>
      <tr
        class="row"
      >
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            <span
              class="toggleIcon"
            >
              <span
                aria-label="su-angle-right"
                class="su-angle-right"
              />
            </span>
            Test3
          </div>
        </td>
        <td
          class="cell"
        >
          <div
            class="cellContent"
          >
            Title2 - Test3
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
